--- a/src/sys-admin/product-page/adminProduct.scss
+++ b/src/sys-admin/product-page/adminProduct.scss
@@ -336,9 +336,9 @@ main {
             }
         }
 
-        .sml-cont {
+        .update-cont {
             width: 500px;
-            height: 600px;
+            height: 200px;
             background-color: $divider-color;
             margin: auto;
             box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -390,6 +390,128 @@ main {
 
             .content-cont {
                 width: 500px;
+                height: 200px;
+
+                .input {
+                    display: flex;
+                    flex-direction: column;
+                    margin: 10px 50px;
+
+                    label {
+                        color: $header-color;
+                    }
+
+                    input[type=text], input[type=file] {
+                        padding: 5px 5px;
+                        font-family: $font-family;
+                        margin-bottom: 10px;
+                        border: 1px solid $header-color;
+                        border-radius: 5px;
+                        outline: none;
+                    }
+
+                    textarea {
+                        padding: 5px 5px;
+                        font-family: $font-family;
+                        margin-bottom: 10px;
+                        border: 1px solid $header-color;
+                        border-radius: 5px;
+                        outline: none;
+                        resize: none;
+                    }
+
+                    select {
+                        padding: 5px 5px;
+                        font-family: $font-family;
+                        margin-bottom: 10px;
+                        border: 1px solid $header-color;
+                        border-radius: 5px;
+                        outline: none;
+                    }
+
+                    input[type=submit] {
+                        padding: 5px 5px;
+                        cursor: pointer;
+                        font-family: $font-family;
+                        color: $white-color;
+                        background-color: $header-color;
+                        border-radius: 5px;
+                        border: none;
+
+                        &:hover {
+                            opacity: 80%;
+                        }
+                    }
+                }
+            }
+        }
+
+        .sml-cont {
+            width: 500px;
+            height: 600px;
+            background-color: $divider-color;
+            margin: auto;
+            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            border-radius: 10px;
+
+            .create-message {
+                font-size: 20px;
+                color: $header-color;
+                margin: 10px;
+                text-align: center;
+            }
+
+            .back-btn {
+                width: 500px;
+                height: 50px;
+                background-color: $header-color;
+                border-radius: 10px 10px 0 0;
+                @include flexBox();
+
+                .bck {
+                    background-color: $header-color;
+                    border: none;
+                    margin: 0 10px 0 10px;
+                    cursor: pointer;
+
+                    &:hover {
+                        opacity: 80%;
+                    }
+                }
+
+                h4 {
+                    color: $white-color;
+                    font-weight: 600;
+                }
+
+                .upd-del-btn {
+                    margin-left: 120px;
+
+                    .upd, .del {
+                        background-color: $divider-color;
+                        font-family: $font-family;
+                        font-size: .9rem;
+                        width: 80px;
+                        border: none;
+                        border-radius: 5px;
+                        color: $header-color;
+                        transition: 0.3s;
+                        cursor: pointer;
+
+                        &:hover {
+                            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                        }
+                    }
+                }
+            }
+
+            .update-cont {
+                width: 500px;
+                height: 550px;
+            }
+
+            .content-cont {
+                width: 500px;
                 height: 550px;
 
                 .ed-prod {
@@ -407,6 +529,24 @@ main {
                             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
                             border-radius: 10px;
                         }
+
+                        button {
+                            position: absolute;
+                            background-color: $header-color;
+                            padding: 1px 20px;
+                            color: $white-color;
+                            font-family: $font-family;
+                            border: none;
+                            border-radius: 10px;
+                            cursor: pointer;
+                            transition: 0.3s;
+                            box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    
+                            &:hover {
+                                opacity: 80%;
+                                box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                            }
+                        }
                     }
 
                     .ep-size-price {
@@ -419,17 +559,96 @@ main {
                         div {
                             margin: 10px 0 0 10px;
                             color: $header-color;
+
+                            p {
+                                .edit-btn {
+                                    background-color: $header-color;
+                                    padding: 1px 20px;
+                                    color: $white-color;
+                                    font-family: $font-family;
+                                    border: none;
+                                    border-radius: 10px;
+                                    cursor: pointer;
+                                    transition: 0.3s;
+                                    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    
+                                    &:hover {
+                                        opacity: 80%;
+                                        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                                    }
+                                }
+                            }
                         }
                     }
                 }
 
                 .ep-name-desc {
+
                     div {
                         margin: 10px 0 0 10px;
                         color: $header-color;
+
+                        p {
+                            .edit-btn {
+                                background-color: $header-color;
+                                padding: 1px 20px;
+                                color: $white-color;
+                                font-family: $font-family;
+                                border: none;
+                                border-radius: 10px;
+                                cursor: pointer;
+                                transition: 0.3s;
+                                box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    
+                                &:hover {
+                                    opacity: 80%;
+                                    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                                }
+                            }
+                        }
+
                     }
                 }
             }
+        } 
+    }
+    //pop up image
+    .image-popup {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        z-index: 99999;
+        background-color: rgba(0, 0, 0, 0.575);
+
+            .image-popup-form {
+                height: 100vh;
+                width: 400px;
+                margin: auto;
+                display: flex;
+                justify-content: center;
+                background-color: $divider-color;
+
+                .update-popup-close {
+                    border-radius: 100%;
+                    border: none;
+                    transition: 0.3s;
+                    cursor: pointer;
+                    position: absolute;
+                    top: 20px;
+                    left: 20px;
+
+                    &:hover {
+                        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+                    }
+
+                .display-image {
+                    height: 80vh;
+                }
+            }
         }
+
     }
 }
