--- a/src/sys-user/customization-page/userCustomization.css
+++ b/src/sys-user/customization-page/userCustomization.css
@@ -143,4 +143,137 @@ header nav a:hover {
   margin: 0 0 0 70px;
   font-size: 0.5rem;
   color: #a8896c;
+}
+
+main {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .container {
+  width: 1120px;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+}
+main .container .custo-cont {
+  width: 740px;
+  height: 90vh;
+}
+main .container .custo-header {
+  margin-top: 10px;
+  height: 50px;
+  width: 740px;
+}
+main .container .custo-header .custo-nav {
+  height: 50px;
+  width: 710px;
+  background-color: #a8896c;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+}
+main .container .custo-canvas {
+  height: 75vh;
+  width: 710px;
+  margin-top: 10px;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+main .progress-cont {
+  width: 380px;
+  height: 90vh;
+}
+main .progress-cont .custo-picker {
+  overflow: scroll;
+  margin-top: 10px;
+  width: 380px;
+  height: 80vh;
+  background-color: #f2e5db;
+  color: #a8896c;
+}
+main .progress-cont .custo-picker::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .progress-cont .custo-picker::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .progress-cont .custo-picker::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .progress-cont .custo-picker::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .progress-cont .custo-picker::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
+}
+main .progress-cont .custo-picker .custo-title {
+  width: 370px;
+  text-align: center;
+  height: 50px;
+  border-bottom: 1px solid #a8896c;
+}
+main .progress-cont .custo-picker .custo-title h1 {
+  padding-top: 6px;
+}
+main .progress-cont .custo-picker .custo-category {
+  width: 370px;
+}
+main .progress-cont .custo-picker .custo-category h5 {
+  margin: 10px 0 10px 10px;
+}
+main .progress-cont .custo-picker .custo-category .choices-cont {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+main .progress-cont .custo-picker .custo-category .choices-cont .choices {
+  width: 80px;
+  height: 80px;
+  border: 1px solid #000000;
+  background-color: #ffffff;
+}
+main .progress-cont .custo-picker .custo-color {
+  width: 370px;
+}
+main .progress-cont .custo-picker .custo-color h5 {
+  margin: 10px 0 10px 10px;
+}
+main .progress-cont .custo-picker .custo-color .choices-cont {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+main .progress-cont .custo-picker .custo-color .choices-cont .choices {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 10px;
+  border: 1px solid #000000;
+  background-color: #ffffff;
+}
+main .progress-cont .custo-picker .custo-design {
+  width: 370px;
+}
+main .progress-cont .custo-picker .custo-design h5 {
+  margin: 10px 0 10px 10px;
+}
+main .progress-cont .custo-picker .custo-design .choices-cont {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+main .progress-cont .custo-picker .custo-design .choices-cont .choices {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 10px;
+  border: 1px solid #000000;
+  background-color: #ffffff;
 }/*# sourceMappingURL=userCustomization.css.map */
