--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -88,6 +88,23 @@ main {
                 .attach-submit {
                     text-align: right;
 
+                    a {
+                        cursor: pointer;
+                        border-radius: 5px;
+                        font-size: .9rem;
+                        color: $white-color;
+                        width: 100px;
+                        padding: 4px 30px;
+                        background-color: #ee3535;
+                        border: none;
+                        font-family: $font-family;
+                        transition: 0.3s;
+
+                        &:hover {
+                            opacity: 80%;
+                        }
+                    }
+
                     input[type=submit] {
                         cursor: pointer;
                         border-radius: 5px;
@@ -96,6 +113,8 @@ main {
                         padding: 4px 0;
                         background-color: $header-color;
                         border: none;
+                        transition: 0.3s;
+                        font-family: $font-family;
 
                         &:hover {
                             opacity: 80%;
@@ -265,6 +284,25 @@ main {
                         border-radius: 50%;
                         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
                     }
+
+                    .edit-btn {
+                        position: absolute;
+                        margin-top: 90px;
+                        background-color: $loginbg-color;
+                        padding: 1px 20px;
+                        color: $header-color;
+                        font-family: $font-family;
+                        border: none;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        transition: 0.3s;
+                        box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+
+                        &:hover {
+                            opacity: 80%;
+                            box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                        }
+                    }
                 }
                 
                 h1 {
@@ -283,9 +321,26 @@ main {
                 p {
                     margin-left: 30px;
                     font-size: .8rem;
+
+                    .edit-btn {
+                        background-color: $header-color;
+                        padding: 1px 20px;
+                        color: $white-color;
+                        font-family: $font-family;
+                        border: none;
+                        border-radius: 10px;
+                        cursor: pointer;
+                        transition: 0.3s;
+                        box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+
+                        &:hover {
+                            opacity: 80%;
+                            box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                        }
+                    }
                 }
 
-                button {
+                .edt-pass {
                     font-family: $font-family;
                     cursor: pointer;
                     width: 100%;
@@ -295,6 +350,7 @@ main {
                     background-color: $header-color;
                     border: none;
                     border-radius: 5px;
+                    transition: 0.3s;
 
                     &:hover {
                         opacity: 80%;
@@ -393,6 +449,7 @@ main {
                                 box-sizing: border-box;
                                 background-color: $white-color;
                                 font-family: $font-family;
+                                transition: 0.3s;
 
                                 &:focus {
                                     outline: none;
@@ -404,6 +461,7 @@ main {
                                 color: $white-color;
                                 cursor: pointer;
                                 margin-top: 10px;
+                                transition: 0.3s;
 
                                 &:hover {
                                     opacity: 80%;
@@ -414,7 +472,108 @@ main {
                     }
                 }
             }
-
         }
+
+        #for-edit {
+            width: 1120px;
+            height: 90vh;
+            @include flexBox();
+            justify-content: center;
+
+            .update-cont {
+                width: 500px;
+                height: 550px;
+    
+                .back-btn {
+                    color: $white-color;
+                    width: 500px;
+                    height: 50px;
+                    background-color: $header-color;
+                    border-radius: 10px 10px 0 0;
+                    @include flexBox();
+    
+                    .bck {
+                        background-color: $header-color;
+                        border: none;
+                        margin: 0 10px 0 10px;
+                        cursor: pointer;
+    
+                        &:hover {
+                            opacity: 80%;
+                        }
+                    }
+                }
+
+                .content-cont {
+                    width: 500px;
+                    height: 200px;
+                    background-color: $divider-color;
+                    border-radius: 0 0 10px 10px;
+                    @include flexBox();
+                    justify-content: center;
+
+                    .input {
+                        display: flex;
+                        flex-direction: column;
+                        width: 440px;
+
+                        label {
+                            color: $header-color;
+                        }
+    
+                        input[type=text], input[type=file] {
+                            padding: 5px 5px;
+                            font-family: $font-family;
+                            border: 1px solid $header-color;
+                            border-radius: 5px;
+                            outline: none;
+                        }
+
+                        input[type=password] {
+                            padding: 5px 5px;
+                            font-family: $font-family;
+                            border: 1px solid $header-color;
+                            border-radius: 5px;
+                            outline: none;
+                        }
+    
+                        textarea {
+                            padding: 5px 5px;
+                            font-family: $font-family;
+                            margin-bottom: 10px;
+                            border: 1px solid $header-color;
+                            border-radius: 5px;
+                            outline: none;
+                            resize: none;
+                        }
+    
+                        select {
+                            padding: 5px 5px;
+                            font-family: $font-family;
+                            margin-bottom: 10px;
+                            border: 1px solid $header-color;
+                            border-radius: 5px;
+                            outline: none;
+                        }
+    
+                        input[type=submit], input[type=button] {
+                            margin-top: 10px;
+                            padding: 5px 5px;
+                            cursor: pointer;
+                            font-family: $font-family;
+                            color: $white-color;
+                            background-color: $header-color;
+                            border-radius: 5px;
+                            border: none;
+    
+                            &:hover {
+                                opacity: 80%;
+                            }
+                        }    
+                    }
+                }
+            }
+        }
+        
     }
 }
